fixed monaco editor suggestion box overflow issue

--- a/src/code/workbench/browser/workbench.styles/workbench.editor.style.css
+++ b/src/code/workbench/browser/workbench.styles/workbench.editor.style.css
@@ -7,3 +7,7 @@
 .code .editor .editor-area {
   height: calc(100% - 56px);
 }
+
+.monaco-editor .suggest-widget {
+  z-index: 2147483647 !important; /* Maximum z-index value */
+}
